[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parking_lot = "0.12.1"
serde = { version = "1.0.175" , features = [ "derive" ] }
surrealdb = "1.0.0-beta.9"
tokio = { version = "1.29.1"  , features = [ "full"   ] }
warp  = "0.3.5"
